# xrd-transforms

./: .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
build-scripts/: travis-ci-setup.sh  travis-ci-test.sh
docs/: transforms-design.rst
perf/: perf_angles_to_dvec.py  perf_gvec_to_xy.py  perf_unit_vector.py
src/: transforms_CAPI.c
test_xrd_transforms/: __init__.py  common.py  conftest.py  test_angles_in_range.py  test_angles_to_dvec.py  test_angles_to_gvec.py  test_angular_difference.py  test_gvec_to_rays.py  test_gvec_to_xy.py  test_make_beam_rmat.py  test_make_binary_rmat.py  test_make_rmat_of_expmap.py  test_make_sample_rmat.py  test_map_angle.py  test_newcapi_angles_to_dvec.py  test_newcapi_angles_to_gvec.py  test_newcapi_gvec_to_xy.py  test_newcapi_make_beam_rmat.py  test_newcapi_make_binary_rmat.py  test_newcapi_make_rmat_of_expmap.py  test_newcapi_make_sample_rmat.py  test_newcapi_oscill_angles_of_hkls.py  test_newcapi_quat_distance.py  test_newcapi_rotate_vecs_about_axis.py  test_newcapi_unit_vector.py  test_newcapi_validate_angle_ranges.py  test_newcapi_xy_to_gvec.py  test_quat_distance.py  test_quat_product_matrix.py  test_rays_to_xy_planar.py  test_reference_ray_plane.py  test_rotate_vecs_about_axis.py  test_row_norm.py  test_solve_omega.py  test_unit_vector.py  test_validate_angle_ranges.py  test_xy_to_gvec.py
tests/: test_angles_in_range.py  test_angles_to_gvec.py  test_angular_difference.py  test_gvec_to_xy.py  test_make_beam_rmat.py  test_make_rmat_of_expmap.py  test_make_sample_rmat.py  test_quat_distance.py  (+3 more)
(+38 files in other folders)
