[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd_transforms"
license = {file = "LICENSE"}
description = "xrd transform utilities"
readme = "README.md"
maintainers = [
    {name = "The HEXRD Development Team", email = "praxes@googlegroups.com"}
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
url = 'http://xrd_transforms.readthedocs.org'

[tool.setuptools_scm]
write_to = "src/xrd_transforms/_version.py"

